--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   skeletonizer: ^1.1.1
   loading_animation_widget: ^1.2.1
   flutter_rating_bar: ^4.0.1
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +70,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/svg/
   fonts:
     - family: Muli
       fonts:
